--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/connect_state"
+    <ImageView
+        android:id="@+id/bing_pic_img"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="未连接"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/timg" />
 
-    <Button
-        android:id="@+id/settings_btn"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="设置"
-        android:textSize="20sp"/>
-    <Button
-        android:id="@+id/pubsub_test_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="测试发布订阅"
-        android:textSize="20sp"/>
-    <Button
-        android:id="@+id/dev_demo_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="示例设备"
-        android:textSize="20sp"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+
+        <Button
+            android:id="@+id/dev_demo_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="示例设备"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/pubsub_test_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="测试发布订阅"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/settings_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="设置"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/connect_state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="未连接" />
+    </LinearLayout>
+    </RelativeLayout>
