--- a/app/src/main/res/layout/activity_pub_sub_test.xml
+++ b/app/src/main/res/layout/activity_pub_sub_test.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/bing_pic_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
+
+
+    <LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/pubsub_connect_state"
@@ -137,3 +150,4 @@
     </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
+</RelativeLayout>
