--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,17 @@
         android:layout_height="wrap_content"
         android:text="示例设备"
         android:textSize="20sp"/>
+
+    <Button
+        android:id="@+id/show_dev_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="管理设备"
+        android:textSize="20sp"/>
+    <Button
+        android:id="@+id/show_detail_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查看设备"
+        android:textSize="20sp"/>
 </LinearLayout>
