--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/city_title2"
+        android:background="@drawable/toum1"
         android:layout_weight="2">
         <Button
             android:id="@+id/city_back_button2"
@@ -20,12 +20,12 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@drawable/ic_back"/>
-        <TextView
-            android:id="@+id/connectState"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="未连接"
-            android:textSize="20sp"/>
+<!--        <TextView-->
+<!--            android:id="@+id/connectState"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="未连接"-->
+<!--            android:textSize="20sp"/>-->
     </RelativeLayout>
 
     <com.example.mqttclient.dele_add.MyListView
