--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,14 @@
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/timg" />
 
+    <TextView
+        android:id="@+id/connect_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="未连接"
+        android:textSize="18sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,37 +27,28 @@
         android:orientation="vertical">
 
 
-        <Button
-            android:id="@+id/dev_demo_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="示例设备"
-            android:textSize="20sp" />
+<!--        <Button-->
+<!--            android:id="@+id/dev_demo_btn"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="示例设备"-->
+<!--            android:textSize="20sp" />-->
 
-        <Button
-            android:id="@+id/pubsub_test_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="测试发布订阅"
-            android:textSize="20sp" />
+<!--        <Button-->
+<!--            android:id="@+id/pubsub_test_btn"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="测试发布订阅"-->
+<!--            android:textSize="20sp" />-->
 
-        <Button
-            android:id="@+id/settings_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="设置"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/connect_state"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="未连接" />
 
         <Button
             android:id="@+id/show_dev_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:alpha="0.7"
+            android:gravity="center|center_horizontal"
             android:text="管理设备"
             android:textSize="20sp" />
 
@@ -57,7 +56,19 @@
             android:id="@+id/show_detail_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:alpha="0.7"
             android:text="查看设备"
             android:textSize="20sp" />
+
+<!--        <Button-->
+<!--            android:id="@+id/settings_btn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center"-->
+<!--            android:text="设置"-->
+<!--            android:textSize="20sp" />-->
+
     </LinearLayout>
     </RelativeLayout>
