--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -26,7 +26,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="80dp"
-    android:background="@drawable/city_title2">
+    android:background="@drawable/toum1">
 
     <TextView
         android:id="@+id/title"
