--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -43,12 +43,13 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center">
+
         <Button
             android:id="@+id/del"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/delete_btn"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:background="@drawable/delete_btn2" />
     </RelativeLayout>
 
 </com.example.mqttclient.dele_add.MyLinearLayout>
